--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "brawl",
+  "name": "shotshell",
   "version": "1.0.0",
   "description": "shell command-based node.js task runner",
-  "main": "brawl.js",
+  "main": "shotshell.js",
   "scripts": {
     "asfd": "asdfj lasjdf las df"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gavinengel/brawl.git"
+    "url": "git+https://github.com/gavinengel/shotshell.git"
   },
   "keywords": [],
   "author": "Gavin Engel <gavin@engel.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/gavinengel/brawl/issues"
+    "url": "https://github.com/gavinengel/shotshell/issues"
   },
-  "homepage": "https://github.com/gavinengel/brawl#readme"
+  "homepage": "https://github.com/gavinengel/shotshell#readme",
+  "dependencies": {
+    "season": "^5.3.0",
+    "shelljs": "^0.5.3"
+  }
 }
